<resources>
    <string name="app_name">ORBIT FINGERS</string>
    <string name="main_menu_message">Orbit Fingers</string>
    <string name="simple">Level 1</string>
    <string name="simple2">Level 2</string>
    <string name="action_settings">Sound</string>
    <string name="SOF">LEVEL </string>
    <string name="banner_ad_unit_id">ca-app-pub-6002737231550640/7399190413</string>
    <string name="play">Play</string>
    <string name="how_to">How-To</string>
    <string name="empty">       </string>
    <string name="current_level_tv">Level: </string>
    <string name="target_score_tv">Target Score:   </string>
    <string name="min_score_tv">Minimum Score: </string>
    <string name="min">MIN</string>
    <string name="penalty_tv">Penalty:       </string>
    <string name="peak_score_tv">PEAK SCORE</string>
    <string name="reset">RESET</string>
    <string name="set_peak_min">SMP </string>
    <string name="set_peak_min_text">SMPs Remaining: </string>
    <string name="spacer">-------->>>></string>
    <string name="x">XX</string>
    <string name="level_2">NEXT L2</string>
    <string name="level_3">NEXT L3</string>
    <string name="level_4">NEXT L4</string>
    <string name="level_5">NEXT L5</string>
    <string name="peak_text">PEAK</string>
    <string name="level_string">LEVEL #</string>
    <string name="login_register">Login / Register</string>
    <string name="peak_score">Peak Score:</string>
    <string name="register">Register</string>
    <string name="username">USERNAME</string>
    <string name="password">Password</string>
    <string name="r_password">Re-Enter Password</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here</string>
    <string name="name">NAME</string>
    <string name="welcome">Welcome</string>
    <string name="reg">Register:</string>
    <string name="min_score">Min Score:</string>
    <string name="smps_remaining">SMPs Remaining:</string>
    <string name="val">VAL</string>
    <string name="device">Device</string>
    <string name="server">Server</string>
    <string name="set">SET</string>
    <string name="load_save">Load / Save</string>
    <string name="position">RANKING:</string>
    <string name="level">Level:</string>
    <string name="not_available">LOADING</string>
    <string name="tied">T</string>
    <string name="top_five">TOP 5</string>
    <string name="title_activity_top_ten">TopTenActivity</string>
    <string name="one"  >1</string>
    <string name="two"  >2</string>
    <string name="three">3</string>
    <string name="four" >4</string>
    <string name="five" >5</string>
    <string name="message">Enter Your Display Message</string>
    <string name="set_message">Set Message</string>
    <string name="set_ranking_message">Set Ranking Message</string>
    <string name="rank">Rank:</string>
    <string name="user_name">Username:</string>
    <string name="peak_txt">Peak:</string>
    <string name="msg_txt">Message:</string>
    <string name="T">T</string>
    <string name="SMPs">SMPs:</string>
    <string name="multi">|MULTI|</string>
    <string name="arrow">></string>
    <string name="load">LOADING</string>
    <string name="reg_message">Values To Be Registered:</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="alert_1">\t\t\t\t\t\t\t\t\t\t\t\tHOW TO PLAY:
        \n
        \nThe goal of OrbitFingers is to get the highest possible Peak Score and to be ranked in the
        TOP 5. The players who have the five highest Peak Scores will have their Usernames and
        Ranking Messages shown in the Top 5 Display.
        \nThe game contains a Left and a Right Orbit System which are independent but can only
        be activated one at a time. Click the left / right finger print area when the applicable
        Orbit System is in alignment to gain  10 points. There are two types of alignments:
        \n
        \n1: The static center is at the beginning of system alignment.
        \n
        \n2: The static center is in the middle of system alignment.
        \n
        \nThere is a penalty in points for activating the finger prints while the appropriate Orbit
        System is not aligned. Points will be deducted until the current Min Score is reached. The
        Min Score starts at zero and gets automatically set when a new Level is reached. The Min
        Score can also be manually set to the same value as the Peak Score by clicking the SMP
        button. The amount of times the SMP can be used is limited, however SMPs can be gained with
        each new Level and also by getting nine consecutive hits. When each new Level is unlocked
        the allowed margin of error is reduced and the rotation speed is increased.
        \n
        \nLevel\t\t\tMin Score\t\t\tPenalty\t\t\tSMPs
        \n\t\t1\t\t\t\t\t\t\t\t\t0\t\t\t\t\t\t\t\t\t\t-1\t\t\t\t\t\t\t+1
        \n\t\t2\t\t\t\t\t\t\t\t100\t\t\t\t\t\t\t\t-5\t\t\t\t\t\t\t+1
        \n\t\t3\t\t\t\t\t\t\t\t300\t\t\t\t\t\t\t\t-10\t\t\t\t\t\t+2
        \n\t\t4\t\t\t\t\t\t\t\t600\t\t\t\t\t\t\t\t-15\t\t\t\t\t\t+2
        \n\t\t5\t\t\t\t\t\t\t\t1000\t\t\t\t\t\t\t-20\t\t\t\t\t\t+5
        \n
        \nClick the Login / Register Button to Login and set your Device Values to the previously
        saved Server Values or click the Register Link to sign up and register the current Device
        Values. Once Logged-in the Player can update the Server Values and get the Current Rank
        including the Top 5 Display. If the player is ranked in the Top 5, their Username and
        adjustable Ranking Message will be displayed.
    </string>
    <string name="alert_2">
        \nAre you sure? All unsaved Device Values will be LOST and / or the User will be LOGGED OUT.
    </string>
    <string name="smp_equal">Minimum And Peak Already Equal</string>
    <string name="tou">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="back">BACK</string>
    <string name="mismatch">Passwords Don\'t Match</string>
    <string name="retry">Retry</string>
    <string name="reg_fail">Register Failed</string>
    <string name="no_ic">No Internet Connection</string>
    <string name="login_fail">Login Failed</string>
    <string name="agree">I AGREE</string>
    <string name="not_agree">I DO NOT AGREE</string>
    <string name="version">Version: 3.0.5</string>
    <string name="poloapps">PoloApps</string>
    <string name="version_release_date">Version Release Date: November 19, 2017</string>
    <string name="developer_marko_simunac">Developer: Marko Simunac</string>
</resources>