<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Home_Activity"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/main_menu_message"
            android:textColor="@android:color/holo_blue_bright"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/how_to_link"
            android:layout_width="wrap_content"
            android:layout_height='wrap_content'
            android:layout_marginTop="7dp"
            android:text="@string/how_to"
            android:textColor="@color/bright_yellow"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/play_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/play"
            android:layout_below="@+id/how_to_link"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/current_level_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_level_tv"
            android:layout_marginTop="18dp"
            android:layout_below="@+id/play_btn"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/current_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:layout_alignBaseline="@+id/current_level_ui"
            android:layout_alignBottom="@+id/current_level_ui"
            android:layout_alignParentEnd="true" />
        <TextView
            android:id="@+id/current_level_ui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spacer"
            android:textColor="@color/green"
            android:layout_alignBaseline="@+id/current_level_text_view"
            android:layout_alignBottom="@+id/current_level_text_view"
            android:layout_alignStart="@+id/how_to_link" />

        <TextView
            android:id="@+id/Peak_Score_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peak_score_tv"
            android:textColor="@color/green2"
            android:layout_above="@+id/min_score_text_view"
            android:layout_alignParentStart="true" />
        <TextView
            android:id="@+id/peak_score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textColor="@color/green2"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/current_level"
            android:layout_alignParentEnd="true" />
        <TextView
            android:id="@+id/peak_score_ui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spacer"
            android:textColor="@color/green2"
            android:layout_alignBaseline="@+id/peak_score_value"
            android:layout_alignBottom="@+id/peak_score_value"
            android:layout_alignStart="@+id/current_level_ui" />
        <TextView
            android:id="@+id/min_score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_score_tv"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/peak_score_ui"
            android:layout_alignParentStart="true" />
        <TextView
            android:id="@+id/target_score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/target_score_tv"
            android:layout_marginTop="17dp"
            android:layout_below="@+id/min_score_text_view"
            android:layout_alignParentStart="true" />
        <TextView
            android:id="@+id/current_min_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:layout_alignBaseline="@+id/min_score_text_view"
            android:layout_alignBottom="@+id/min_score_text_view"
            android:layout_alignParentEnd="true" />
        <TextView
            android:id="@+id/min_score_ui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spacer"
            android:textColor="@color/green"
            android:layout_alignBaseline="@+id/min_score_text_view"
            android:layout_alignBottom="@+id/min_score_text_view"
            android:layout_alignStart="@+id/peak_score_ui" />
        <TextView
            android:id="@+id/penalty_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/penalty_tv"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/target_score_text_view"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/current_target_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:layout_alignTop="@+id/target_score_text_view"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/target_score_ui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spacer"
            android:textColor="@color/green"
            android:layout_alignBaseline="@+id/target_score_text_view"
            android:layout_alignBottom="@+id/target_score_text_view"
            android:layout_alignStart="@+id/min_score_ui" />

        <TextView
            android:id="@+id/current_penalty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:layout_alignBaseline="@+id/penalty_ui"
            android:layout_alignBottom="@+id/penalty_ui"
            android:layout_alignParentEnd="true" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/smp_text_view"
            android:layout_marginTop="14dp"
            android:foregroundGravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />

        <TextView
            android:id="@+id/penalty_ui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spacer"
            android:textColor="@color/red"
            android:layout_above="@+id/smp_text_view"
            android:layout_alignStart="@+id/target_score_ui" />
        <TextView
            android:id="@+id/smp_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_peak_min_text"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/penalty_text_view"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/remaining_smp_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:layout_alignBaseline="@+id/smp_text_view"
            android:layout_alignBottom="@+id/smp_text_view"
            android:layout_alignParentEnd="true" />
        <TextView
            android:id="@+id/smp_ui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spacer"
            android:textColor="@color/red"
            android:layout_alignBaseline="@+id/smp_text_view"
            android:layout_alignBottom="@+id/smp_text_view"
            android:layout_alignStart="@+id/penalty_ui" />
        <Button
            android:id="@+id/set_peak_min_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/set_peak_min"
            android:layout_marginTop="18dp"
            android:layout_below="@+id/adView"
            android:layout_alignParentStart="true" />
        <Button
            android:id="@+id/login_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/login_register"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />








    </RelativeLayout>
    </ScrollView>
